<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECF5FF"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/setting_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#C4E1FF"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/setting_title"
        android:textSize="12pt" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30pt"
        android:layout_margin="2dp"
        android:layout_weight="0.2"
        android:gravity="center"
        android:weightSum="10" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="#C4E1FF"
            android:gravity="right"
            android:text="@string/id_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/idText"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:background="#FFFFFF"
            android:gravity="left"
            android:textAppearance="?android:attr/textAppearanceMedium" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30pt"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:weightSum="10" >

        <TextView
            android:id="@+id/passwd_label"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="#C4E1FF"
            android:gravity="right"
            android:text="@string/passwd_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/passWDText"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:background="#FFFFFF"
            android:gravity="left"
            android:inputType="textPassword"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:layout_weight="1"
        android:gravity="left"
        android:text="@string/right"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/red_light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_weight="0"
        android:background="#C4E1FF" >

        <Button
            android:id="@+id/save_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save_button"
            tools:targetApi="11" >
        </Button>

        <Button
            android:id="@+id/cancel_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel_button"
            tools:targetApi="11" >
        </Button>
    </LinearLayout>

</LinearLayout>